# localstack-aws-samples

./: CLAUDE.md  PORTING.md  README.md  openspec.yaml  pyproject.toml  run-samples.sh
.github/scripts/: build-matrix.sh
.github/workflows/: run-samples.yml
badges/: lambda-function-urls-javascript.json  lambda-function-urls-python.json  stepfunctions-lambda.json
lambda-debugging-sam-java/: Makefile
lambda-debugging-sam-javascript/: Makefile
lambda-debugging-sam-python/: Makefile
lambda-debugging-sam-typescript/: Makefile
lambda-function-urls-python/scripts/: test.sh  validate.sh
openspec/changes/port-batch-2-samples/: proposal.md  tasks.md
openspec/changes/port-high-priority-samples/: design.md  proposal.md  tasks.md
samples/: conftest.py
samples/apigw-custom-domain/python/: .gitignore  README.md  handler.py
samples/apigw-websockets/javascript/: README.md  handler.js  package-lock.json  package.json  serverless.yml  test_apigw_websockets.py
samples/athena-s3-queries/python/: test_athena_s3_queries.py
samples/chalice-rest-api/python/: README.md  app.py  handler.py  test_chalice_api.py
samples/cloudwatch-metrics-aws/python/: README.md  handler.py  test_cloudwatch_metrics.py
samples/cognito-jwt/python/: README.md  test_cognito_jwt.py
samples/ecs-ecr-app/python/: Dockerfile  README.md  index.html
samples/elb-load-balancing/javascript/: README.md  handler.js  test_elb.py
scripts/: lib.sh  setup-test-badges.sh
stepfunctions-lambda/scripts/: test.sh  validate.sh
tests/: conftest.py  test_lambda_function_urls.py
(+222 files in other folders)
