[project]
name = "localstack-pro-samples"
version = "0.1.0"
description = "LocalStack Pro sample applications"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--timeout=300",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Markers for filtering tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
